--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-elements": "^3.4.2",
+    "react-native-safe-area-context": "^4.2.5",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
