--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "^4.2.5",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
