--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-elements": "^3.4.2",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
+    "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
